testdata/fixtures/env/negative/providers_npm_neg.js
// must NOT fire: npm token near-misses.
const npmTokenTooShort = "npm_FAKEFAKEFAKEFAKEFAKEFAKEFAKEFAKEFAK";
const npmTokenNoUnderscore = "npmFAKEFAKEFAKEFAKEFAKEFAKEFAKEFAKEFAA1";
